# py-backend

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
citi_project/backend/: app.py  err_handler.py  model.py  util.py
citi_project/w3/: __init__.py  web3.py
citi_project/web3/: __init__.py  web3.py
